# openpaste

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/clipboard-ai/: Cargo.toml
crates/clipboard-ai/src/: ai.rs  lib.rs
crates/clipboard-api/: Cargo.toml
crates/clipboard-api/src/: api.rs  handlers.rs  lib.rs  main.rs
crates/clipboard-cli/: Cargo.toml
crates/clipboard-cli/src/: lib.rs
crates/clipboard-core/: Cargo.toml
crates/clipboard-core/src/: clipboard.rs  item.rs  lib.rs
crates/clipboard-daemon/: Cargo.toml
crates/clipboard-daemon/src/: main.rs
crates/clipboard-db/: Cargo.toml
crates/clipboard-db/migrations/: 001_initial.sql
crates/clipboard-db/src/: database.rs  lib.rs  models.rs  schema.rs
crates/clipboard-encryption/: Cargo.toml
crates/clipboard-encryption/src/: encryption.rs  key_derivation.rs  lib.rs
crates/clipboard-events/: Cargo.toml
crates/clipboard-events/src/: bus.rs  event.rs  lib.rs
crates/clipboard-ipc/: Cargo.toml
crates/clipboard-ipc/src/: error.rs  ipc.rs  lib.rs
crates/clipboard-platform/: Cargo.toml
crates/clipboard-platform/src/: lib.rs  provider.rs
crates/clipboard-plugin/: Cargo.toml
crates/clipboard-plugin/src/: lib.rs  plugin.rs  sandbox.rs
crates/clipboard-search/: Cargo.toml
crates/clipboard-search/src/: lib.rs  search.rs
crates/clipboard-storage/: Cargo.toml
crates/clipboard-storage/src/: lib.rs  storage.rs
crates/clipboard-sync/: Cargo.toml
crates/clipboard-sync/src/: lib.rs  sync.rs
docs/: AI.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  DATABASE.md  DESIGN_SYSTEM.md  ENCRYPTION.md  EVENTS.md  IPC.md  PLATFORM.md  PLUGIN_SDK.md  PROJECT.md  RELEASE.md  REPOSITORY_STRUCTURE.md  REST_API.md  ROADMAP.md  SEARCH.md  SECURITY.md  STACK.md  STORAGE.md  TASKS.md  TESTING.md  UI.md
