[package]
name = "openpaste-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openpaste"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
