[package]
name = "openpaste-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openpaste"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = "5.0"
clipboard-ipc = { path = "../../crates/clipboard-ipc" }
colored = "2.1"
chrono = { workspace = true }
base64 = "0.22"
