[package]
name = "clipboard-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clipboard-core = { path = "../clipboard-core" }
clipboard-db = { path = "../clipboard-db" }
clipboard-search = { path = "../clipboard-search" }
