[package]
name = "openpaste-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "global-shortcut-all", "window-show", "window-center", "window-set-focus", "shell-open", "system-tray", "global-shortcut", "dialog-open"] }
serde = { workspace = true }
serde_json = { workspace = true }
clipboard-core = { path = "../../../crates/clipboard-core" }
clipboard-ipc = { path = "../../../crates/clipboard-ipc" }
chrono = { workspace = true }
dirs = "5.0"
base64 = "0.22"
arboard = "3.3"
notify-rust = { version = "4.11" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
